# backend/src/routes/userRoutes.js
@@ -4,6 +4,7 @@ import {
   getUser,
   register,
   remove,
+  update,
 } from "../controllers/userControllers.js";
 import authenticateToken from "../middlewares/authMiddleware.js";
 import { credentialsIsValid } from "../middlewares/credentialsMiddleware.js";
@@ -15,6 +16,8 @@ router.get("/", authenticateToken, getUsers);
 router.get("/:id", getUser);
 
 router.post("/register", credentialsIsValid, register);
+
+router.post("/update", authenticateToken, update);
 
 router.delete("/remove", authenticateToken, remove);
 
